Docker_kubernetes/Part6/ejemplo/manifiestos/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
  labels:
    app: backend1-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1-app
  template:
    metadata:
      labels:
        app: backend1-app
    spec:
      containers:
        - name: backend1-container
          image: localhost:5000/backend1
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 3100
