Docker_kubernetes/Part6/ejemplo/manifiestos/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend2-app
  template:
    metadata:
      labels:
        app: backend2-app
    spec:
      containers:
        - name: backend2-container
          image: localhost:5000/backend2
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 3200
