Docker_kubernetes/Part6/ejemplo/manifiestos/backend2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2-svc
spec:
  type: ClusterIP
  selector:
    app: backend2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3200
