Docker_kubernetes/Part6/ejemplo/manifiestos/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/config
            backend:
              serviceName: frontend-svc
              servicePort: 80
          - path: /api/message
            backend:
              serviceName: backend1-svc
              servicePort: 80
          - path: /
            backend:
              serviceName: frontend-svc
              servicePort: 80
